fix(ui): missing Inter font

--- a/packages/webapp/public/index.html
+++ b/packages/webapp/public/index.html
@@ -11,7 +11,10 @@
 
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto+Mono&display=swap"
+            rel="stylesheet"
+        />
         <script src="/env.js?<%=  'hash='+__webpack_hash__  %>"></script>
     </head>
 
